# template

./: .gitignore  .gitmessage.txt  README.md  pyproject.toml
.github/workflows/: CI.yml
app/: main.py
app/User/entity/: user.py
app/controller/: user.py
app/core/: config.py
app/database/: connection.py
app/entity/: event.py  movie.py  user.py
migrations/models/: 1_20241013145406_update.py  2_20241013152122_update.py  3_20241013154702_update.py  4_20241013161441_add_moive.py
